examples/error/error1.go
// Go in action
// @jeffotoni
// 2019-01-24

package main

import "fmt"

func main() {
	var error error
	fmt.Println(error)
}
